--- a/docs/데모가이드.md
+++ b/docs/데모가이드.md
@@ -1,4 +1,4 @@
-# 🎬 Mini-KVM 시연 가이드
+# 🎬 Mini-KVM 데모 가이드
 
 발표 시 직접 시연할 수 있는 완전한 가이드입니다.
 
@@ -24,7 +24,7 @@ cd os-1k && make && cd ..
 
 ## 🎯 시연 시나리오
 
-### Demo 1: 기본 Real Mode 게스트들
+### 시연 1: 기본 리얼 모드 게스트
 
 #### 1-1. Minimal Guest (가장 단순한 1바이트 게스트)
 ```bash
@@ -64,7 +64,7 @@ Hello, KVM!
 
 ---
 
-### Demo 2: 멀티 vCPU (★ 가장 인상적!)
+### 시연 2: 다중 vCPU (★ 핵심 기능!)
 
 #### 2개 게스트 동시 실행
 ```bash
@@ -104,7 +104,7 @@ Hello, KVM!
 
 ---
 
-### Demo 3: 1K OS (Protected Mode with Paging) - ★ 9가지 프로그램!
+### 시연 3: 1K OS (보호 모드 및 페이징) - ★ 9가지 프로그램!
 
 #### 3-1. 구구단 출력
 ```bash
