Refactor: Isolate experimental code and remove emojis

--- a/docs/데모가이드.md
+++ b/docs/데모가이드.md
@@ -1,10 +1,10 @@
-# 🎬 Mini-KVM 데모 가이드
+# Mini-KVM 데모 가이드
 
 발표 시 직접 시연할 수 있는 완전한 가이드입니다.
 
 ---
 
-## 📋 사전 준비
+## 사전 준비
 
 ### 1. 디렉토리 이동
 ```bash
@@ -22,7 +22,7 @@ cd os-1k && make && cd ..
 
 ---
 
-## 🎯 시연 시나리오
+## 시연 시나리오
 
 ### 시연 1: 기본 리얼 모드 게스트
 
@@ -64,7 +64,7 @@ Hello, KVM!
 
 ---
 
-### 시연 2: 다중 vCPU (★ 핵심 기능!)
+### 시연 2: 다중 vCPU (핵심 기능!)
 
 #### 2개 게스트 동시 실행
 ```bash
@@ -104,7 +104,7 @@ Hello, KVM!
 
 ---
 
-### 시연 3: 1K OS (보호 모드 및 페이징) - ★ 9가지 프로그램!
+### 시연 3: 1K OS (보호 모드 및 페이징) - 9가지 프로그램!
 
 #### 3-1. 구구단 출력
 ```bash
@@ -247,7 +247,7 @@ Mini-KVM Educational VMM Project
 
 ---
 
-#### 3-8. Factorial (0! ~ 12!) - ★ 신규!
+#### 3-8. Factorial (0! ~ 12!) - 신규!
 ```bash
 printf "8\n0\n" | ./kvm-vmm --paging os-1k/kernel.bin
 ```
@@ -278,7 +278,7 @@ Note: 13! and above overflow 32-bit integers
 
 ---
 
-#### 3-9. GCD (최대공약수) - ★ 신규!
+#### 3-9. GCD (최대공약수) - 신규!
 ```bash
 printf "9\n0\n" | ./kvm-vmm --paging os-1k/kernel.bin
 ```
@@ -299,7 +299,7 @@ GCD(17, 19) = 1 (coprime)
 
 ---
 
-## 💡 시연 팁
+## 시연 팁
 
 ### 1. 출력 정리
 디버그 메시지가 너무 많으면:
@@ -321,9 +321,9 @@ clear
 
 ---
 
-## 🎤 발표 스크립트 예시
+## 발표 스크립트 예시
 
-### Demo 2 (멀티 vCPU) 시연 시
+### 시연 2 (다중 vCPU) 시연 시
 ```
 "이제 가장 인상적인 부분인 멀티 vCPU를 보여드리겠습니다.
 두 개의 완전히 독립적인 프로그램이 동시에 실행됩니다.
@@ -337,7 +337,7 @@ clear
 Real Mode의 세그먼트 주소 지정 방식을 사용합니다."
 ```
 
-### Demo 3-3 (에코) 시연 시
+### 시연 3-3 (에코) 시연 시
 ```
 "이 에코 프로그램은 특별한 의미가 있습니다.
 오늘 발견하고 수정한 버그의 결과물이기 때문입니다.
@@ -356,7 +356,7 @@ IOPL=3을 설정해서 user space에서 I/O 명령어를
 
 ---
 
-## 🐛 문제 해결
+## 문제 해결
 
 ### 문제: "Permission denied" 또는 KVM 접근 불가
 ```bash
@@ -383,7 +383,7 @@ make
 
 ---
 
-## 📊 핵심 수치
+## 핵심 수치
 
 발표 시 언급할 수 있는 통계:
 - **코드 크기**: minimal 1바이트 ~ 1K OS 12KB
@@ -395,7 +395,7 @@ make
 
 ---
 
-## ✅ 시연 체크리스트
+## 시연 체크리스트
 
 시연 전 확인:
 - [ ] 디렉토리 위치 확인 (`kvm-vmm-x86`)
@@ -408,4 +408,4 @@ make
 
 ---
 
-**준비 완료! 성공적인 발표 되시길 바랍니다! 🚀**
+**준비 완료! 성공적인 발표 되시길 바랍니다!**
