chore: Final polish and cleanup for project completion
Documentation:
- Fix README.md links to use correct Korean filenames
- Update 데모가이드.md menu structure to match actual 9 programs
  (replace ASCII Art section with Calculator; reorder programs)
- Add MIT LICENSE file
- Create experimental/README.md documenting research components

Code Quality:
- Add --verbose flag to main.c for optional debug logging
  (VM exits, I/O operations, and hypercalls logged when enabled)
- Clean up educational comments in counter.S
  (replace TODO(human) hints with clear step-by-step structure)
- Remove unused alloc_page() function from test_kernel.c

Repository:
- Remove empty experimental/linux-guest directory
- Run make clean in all build directories
- All builds verified working

This completes the project with production-ready polish while
maintaining all core functionality and educational value.

--- a/docs/데모가이드.md
+++ b/docs/데모가이드.md
@@ -123,12 +123,12 @@ printf "1\n0\n" | ./kvm-vmm --paging os-1k/kernel.bin
   1. Multiplication Table (2x1 ~ 9x9)
   2. Counter (0-9)
   3. Echo (interactive)
-  4. About 1K OS
-  5. Fibonacci Sequence
-  6. Prime Numbers (up to 100)
-  7. ASCII Art
-  8. Factorial (0! ~ 12!)
-  9. GCD (Euclidean Algorithm)
+  4. Fibonacci Sequence
+  5. Prime Numbers (up to 100)
+  6. Calculator (+, -, *, /)
+  7. Factorial (0! ~ 12!)
+  8. GCD (Euclidean Algorithm)
+  9. About 1K OS
   0. Exit
 
 Select: 1
@@ -174,34 +174,9 @@ Exiting echo program
 
 ---
 
-#### 3-4. About 1K OS
+#### 3-4. Fibonacci 수열
 ```bash
 printf "4\n0\n" | ./kvm-vmm --paging os-1k/kernel.bin
-```
-
-**예상 결과**:
-```
-=== About 1K OS ===
-1K OS: Operating System in 1000 Lines
-Ported from RISC-V to x86 Protected Mode
-Features:
-  - Protected Mode with Paging
-  - Keyboard and Timer Interrupts
-  - Simple Shell
-  - User Programs: 9 demos
-
-Mini-KVM VMM Project
-Educational hypervisor using KVM API
-
-Exiting shell...
-Thank you for using 1K OS!
-```
-
----
-
-#### 3-5. Fibonacci 수열
-```bash
-printf "5\n0\n" | ./kvm-vmm --paging os-1k/kernel.bin
 ```
 
 **예상 결과**:
@@ -213,46 +188,50 @@ Calculating Fibonacci numbers up to 89:
 
 ---
 
-#### 3-6. 소수 찾기
+#### 3-5. 소수 찾기
 ```bash
-printf "6\n0\n" | ./kvm-vmm --paging os-1k/kernel.bin
+printf "5\n0\n" | ./kvm-vmm --paging os-1k/kernel.bin
 ```
 
 **예상 결과**:
 ```
 === Prime Numbers up to 100 ===
-2 3 5 7 11 13 17 19 23 29 
-31 37 41 43 47 53 59 61 67 71 
-73 79 83 89 97 
+2 3 5 7 11 13 17 19 23 29
+31 37 41 43 47 53 59 61 67 71
+73 79 83 89 97
 Total: 25 primes
 ```
 
 ---
 
-#### 3-7. ASCII Art
+#### 3-6. 계산기
 ```bash
-printf "7\n0\n" | ./kvm-vmm --paging os-1k/kernel.bin
+printf "6\n12 + 5\n100 - 37\n10 * 7\n100 / 4\nq\n0\n" | ./kvm-vmm --paging os-1k/kernel.bin
 ```
+
+**설명**:
+- 기본 사칙연산 (+, -, *, /)
+- 대화형 입력으로 여러 계산 가능
 
 **예상 결과**:
 ```
-=== 1K OS ASCII Art ===
-  ___  _  __   ___  ____  
- / _ \/ |/ /  / _ \/ __/  
-/ // /   /  / // /\ \    
-\___/_/|_/   \___/___/    
-                          
-Mini-KVM Educational VMM Project
+=== Simple Calculator ===
+Enter expression (e.g., "10 + 5") or 'q' to quit:
+$ 12 + 5 = 17
+$ 100 - 37 = 63
+$ 10 * 7 = 70
+$ 100 / 4 = 25
+$ Exiting calculator...
 ```
 
 ---
 
-#### 3-8. Factorial (0! ~ 12!) - 신규!
+#### 3-7. Factorial (0! ~ 12!)
 ```bash
-printf "8\n0\n" | ./kvm-vmm --paging os-1k/kernel.bin
+printf "7\n0\n" | ./kvm-vmm --paging os-1k/kernel.bin
 ```
 
-**설명**: 
+**설명**:
 - 팩토리얼 계산 (0! 부터 12!)
 - 13! 이상은 32비트 오버플로 경고
 
@@ -278,12 +257,12 @@ Note: 13! and above overflow 32-bit integers
 
 ---
 
-#### 3-9. GCD (최대공약수) - 신규!
+#### 3-8. GCD (최대공약수)
 ```bash
-printf "9\n0\n" | ./kvm-vmm --paging os-1k/kernel.bin
+printf "8\n0\n" | ./kvm-vmm --paging os-1k/kernel.bin
 ```
 
-**설명**: 
+**설명**:
 - 유클리드 호제법 (Euclidean Algorithm) 시연
 - 5가지 예제 쌍 계산
 
@@ -295,6 +274,31 @@ GCD(100, 35) = 5
 GCD(81, 27) = 27
 GCD(123, 456) = 3
 GCD(17, 19) = 1 (coprime)
+```
+
+---
+
+#### 3-9. About 1K OS
+```bash
+printf "9\n0\n" | ./kvm-vmm --paging os-1k/kernel.bin
+```
+
+**예상 결과**:
+```
+=== About 1K OS ===
+1K OS: Operating System in 1000 Lines
+Ported from RISC-V to x86 Protected Mode
+Features:
+  - Protected Mode with Paging
+  - Keyboard and Timer Interrupts
+  - Simple Shell
+  - User Programs: 9 demos
+
+Mini-KVM VMM Project
+Educational hypervisor using KVM API
+
+Exiting shell...
+Thank you for using 1K OS!
 ```
 
 ---
@@ -391,7 +395,7 @@ make
 - **최대 vCPU**: 4개 동시 실행
 - **하이퍼콜 종류**: 3가지 (PUTCHAR, GETCHAR, EXIT)
 - **VM exits**: 간단한 게스트 ~10회, 1K OS ~5000회
-- **1K OS 프로그램**: 9개 (구구단, 카운터, 에코, About, 피보나치, 소수, ASCII Art, 팩토리얼, GCD)
+- **1K OS 프로그램**: 9개 (구구단, 카운터, 에코, 피보나치, 소수, 계산기, 팩토리얼, GCD, About)
 
 ---
 
