docs: Add critical guest build instructions to demo guide
The demo guide referenced commands for running guests (multiplication.bin,
fibonacci.bin, hctest.bin) but these files were not being built. Users
following the guide would encounter "fopen: No such file or directory" error.

Changes:
- Add Section 3: Guest Program Build with explicit build instructions
- Show 3 build methods: build.sh (recommended), individual Makefile targets,
  and combined build+run shortcuts
- Add build verification step with expected file sizes
- Include all 6 guest programs: minimal, hello, counter, multiplication,
  fibonacci, hctest

This ensures users can reproduce all demo commands exactly as documented:
- ✓ Demo 1-1 to 1-3 (single guests): already working
- ✓ Demo 2: Multi-vCPU with 2 guests (multiplication + counter): NOW WORKS
- ✓ Demo 2: Multi-vCPU with 4 guests: NOW WORKS
- ✓ Demo 3: All 9 1K OS programs: already working

All 14+ demo commands have been tested and verified working.

--- a/docs/데모가이드.md
+++ b/docs/데모가이드.md
@@ -20,6 +20,53 @@ make vmm
 cd os-1k && make && cd ..
 ```
 
+### 3. 게스트 프로그램 빌드
+
+**중요**: 다음 명령어들을 실행하기 전에 게스트 프로그램을 반드시 빌드해야 합니다.
+
+```bash
+# 모든 게스트 프로그램 빌드 (가장 권장)
+cd guest && ./build.sh && cd ..
+```
+
+또는 개별 게스트 빌드:
+
+```bash
+# 개별 빌드 방법 1: Makefile 사용
+make build-minimal
+make build-hello
+make build-counter
+make build-multiplication
+make build-fibonacci
+make build-hctest
+
+# 개별 빌드 방법 2: 한 번에 빌드 및 실행
+make minimal      # minimal.bin 빌드 및 실행
+make hello        # hello.bin 빌드 및 실행
+make counter      # counter.bin 빌드 및 실행
+make multiplication
+make fibonacci
+make hctest
+```
+
+**빌드 확인**:
+
+```bash
+ls -lh guest/*.bin
+```
+
+**예상 결과**:
+```
+-rwxr-xr-x. minimal.bin      (1 bytes)
+-rwxr-xr-x. hello.bin       (15 bytes)
+-rwxr-xr-x. counter.bin     (18 bytes)
+-rwxr-xr-x. multiplication.bin (112 bytes)
+-rwxr-xr-x. fibonacci.bin    (82 bytes)
+-rwxr-xr-x. hctest.bin      (79 bytes)
+```
+
+모든 파일이 존재하면 준비 완료! 아래의 시연 명령어들을 실행하면 됩니다.
+
 ---
 
 ## 시연 시나리오
