refactor: Makefile을 중심으로 빌드 시스템 통합
 디렉토리의  하나로 모든 빌드, 실행,
정리 작업을 통합합니다. 이를 통해 별도의  스크립트나
산재된 빌드 지침 없이, 명확하고 표준적인 단일 인터페이스를
제공합니다.

주요 개선점:
- Makefile ():
  - 모든 동작의 단일 제어 지점이 되도록 재작성했습니다.
  -  또는  입력 시, 사용자 친화적인 도움말 메뉴를 표시합니다.
  - 모든 게스트와 데모에 대해 일관된  타겟을 추가했습니다
    (예: , ).
  - 실행 타겟의 의존성을 설정하여, 필요시 빌드가 자동으로 수행됩니다.
  -  타겟이 모든 하위 디렉토리를 정상적으로 정리합니다.

- 문서 (Documentation):
  - , ,  파일을
    새로운  기반 워크플로우에 맞춰 업데이트했습니다.
  - 이전 빌드 방식, , 직접  실행에 대한 모든 참조를 제거했습니다.

- 버그 수정 및 경고 해결:
  - 의 RWX 권한 관련  링커 경고를 수정했습니다.
     파일에  (R+X)와  (R+W)
    세그먼트를 명시적으로 정의하여 해결했습니다.
  - 중앙  명령을 지원하기 위해 을
    추가했습니다.

--- a/docs/데모가이드.md
+++ b/docs/데모가이드.md
@@ -11,58 +11,33 @@
 cd ~/문서/코드/mini-kvm/kvm-vmm-x86
 ```
 
-### 2. 빌드 확인 (필요시)
-```bash
-# VMM 빌드
-make vmm
+### 2. 프로젝트 빌드
 
-# 1K OS 빌드 확인
-cd os-1k && make && cd ..
-```
-
-### 3. 게스트 프로그램 빌드
-
-**중요**: 다음 명령어들을 실행하기 전에 게스트 프로그램을 반드시 빌드해야 합니다.
+모든 VMM, 게스트 프로그램 및 1K OS는 `make` 명령을 사용하여 빌드하고 실행할 수 있습니다.
+`make all` 명령으로 모든 구성요소를 한 번에 빌드할 수 있습니다.
 
 ```bash
-# 모든 게스트 프로그램 빌드 (가장 권장)
-cd guest && ./build.sh && cd ..
-```
-
-또는 개별 게스트 빌드:
-
-```bash
-# 개별 빌드 방법 1: Makefile 사용
-make build-minimal
-make build-hello
-make build-counter
-make build-multiplication
-make build-fibonacci
-make build-hctest
-
-# 개별 빌드 방법 2: 한 번에 빌드 및 실행
-make minimal      # minimal.bin 빌드 및 실행
-make hello        # hello.bin 빌드 및 실행
-make counter      # counter.bin 빌드 및 실행
-make multiplication
-make fibonacci
-make hctest
+# 모든 구성요소 빌드 (VMM, 게스트, 1K OS)
+make all
 ```
 
 **빌드 확인**:
 
 ```bash
-ls -lh guest/*.bin
+ls -lh kvm-vmm guest/*.bin os-1k/*.bin
 ```
 
 **예상 결과**:
 ```
--rwxr-xr-x. minimal.bin      (1 bytes)
--rwxr-xr-x. hello.bin       (15 bytes)
--rwxr-xr-x. counter.bin     (18 bytes)
--rwxr-xr-x. multiplication.bin (112 bytes)
--rwxr-xr-x. fibonacci.bin    (82 bytes)
--rwxr-xr-x. hctest.bin      (79 bytes)
+-rwxr-xr-x. 1 seolcu seolcu 25K 11월 23일  HH:MM kvm-vmm
+-rwxr-xr-x. 1 seolcu seolcu 18  11월 23일  HH:MM guest/counter.bin
+-rwxr-xr-x. 1 seolcu seolcu 82  11월 23일  HH:MM guest/fibonacci.bin
+-rwxr-xr-x. 1 seolcu seolcu 79  11월 23일  HH:MM guest/hctest.bin
+-rwxr-xr-x. 1 seolcu seolcu 33  11월 23일  HH:MM guest/hello.bin
+-rwxr-xr-x. 1 seolcu seolcu 1   11월 23일  HH:MM guest/minimal.bin
+-rwxr-xr-x. 1 seolcu seolcu 142 11월 23일  HH:MM guest/multiplication.bin
+-rwxr-xr-x. 1 seolcu seolcu 51  11월 23일  HH:MM guest/pmode_test.bin
+-rwxr-xr-x. 1 seolcu seolcu 12K 11월 23일  HH:MM os-1k/kernel.bin
 ```
 
 모든 파일이 존재하면 준비 완료! 아래의 시연 명령어들을 실행하면 됩니다.
@@ -71,11 +46,13 @@ ls -lh guest/*.bin
 
 ## 시연 시나리오
 
+모든 시연은 `kvm-vmm-x86` 디렉토리에서 `make run-<타겟>` 형식으로 실행합니다.
+
 ### 시연 1: 기본 리얼 모드 게스트
 
 #### 1-1. Minimal Guest (가장 단순한 1바이트 게스트)
 ```bash
-./kvm-vmm guest/minimal.bin
+make run-minimal
 ```
 **설명**: 단 1바이트(HLT 명령어)로 구성된 가장 단순한 게스트. VMM이 정상 동작하는지 확인.
 
@@ -85,9 +62,9 @@ ls -lh guest/*.bin
 
 #### 1-2. Hello Guest (문자열 출력)
 ```bash
-./kvm-vmm guest/hello.bin
+make run-hello
 ```
-**설명**: "Hello, KVM!" 메시지를 UART 포트(0x3f8)로 출력하는 28바이트 게스트.
+**설명**: "Hello, KVM!" 메시지를 UART 포트(0x3f8)로 출력하는 게스트.
 
 **예상 결과**: 
 ```
@@ -99,9 +76,9 @@ Hello, KVM!
 
 #### 1-3. Counter Guest (숫자 출력)
 ```bash
-./kvm-vmm guest/counter.bin
+make run-counter
 ```
-**설명**: 0부터 9까지 순차적으로 출력하는 18바이트 게스트.
+**설명**: 0부터 9까지 순차적으로 출력하는 게스트.
 
 **예상 결과**: 
 ```
@@ -115,7 +92,7 @@ Hello, KVM!
 
 #### 2개 게스트 동시 실행
 ```bash
-./kvm-vmm guest/multiplication.bin guest/counter.bin
+make run-multi2
 ```
 
 **설명**:
@@ -140,7 +117,7 @@ Hello, KVM!
 
 #### 4개 게스트 동시 실행 (최대 확장성)
 ```bash
-./kvm-vmm guest/counter.bin guest/hello.bin guest/multiplication.bin guest/minimal.bin
+make run-multi4
 ```
 
 **설명**: 4개 vCPU가 각각 다른 프로그램을 동시에 실행
@@ -157,7 +134,7 @@ Hello, KVM!
 
 #### 3-1. 구구단 출력
 ```bash
-printf "1\n0\n" | ./kvm-vmm --paging os-1k/kernel.bin
+make run-1k-os-multiplication
 ```
 
 **설명**: 
@@ -190,7 +167,7 @@ Select: 1
 
 #### 3-2. 카운터
 ```bash
-printf "2\n0\n" | ./kvm-vmm --paging os-1k/kernel.bin
+make run-1k-os-counter
 ```
 
 **예상 결과**:
@@ -203,7 +180,7 @@ printf "2\n0\n" | ./kvm-vmm --paging os-1k/kernel.bin
 
 #### 3-3. 대화형 에코
 ```bash
-printf "3\nHello World!\nThis is amazing!\nquit\n0\n" | ./kvm-vmm --paging os-1k/kernel.bin
+make run-1k-os-echo
 ```
 
 **설명**: 
@@ -213,8 +190,8 @@ printf "3\nHello World!\nThis is amazing!\nquit\n0\n" | ./kvm-vmm --paging os-1k
 **예상 결과**:
 ```
 === Echo Program (type 'quit' to exit) ===
-$ Hello World!
-Echo: Hello World!
+$ Hello 1K OS
+Echo: Hello 1K OS
 $ This is amazing!
 Echo: This is amazing!
 $ quit
@@ -225,7 +202,7 @@ Exiting echo program
 
 #### 3-4. Fibonacci 수열
 ```bash
-printf "4\n0\n" | ./kvm-vmm --paging os-1k/kernel.bin
+make run-1k-os-fibonacci
 ```
 
 **예상 결과**:
@@ -239,7 +216,7 @@ Calculating Fibonacci numbers up to 89:
 
 #### 3-5. 소수 찾기
 ```bash
-printf "5\n0\n" | ./kvm-vmm --paging os-1k/kernel.bin
+make run-1k-os-primes
 ```
 
 **예상 결과**:
@@ -255,7 +232,7 @@ Total: 25 primes
 
 #### 3-6. 계산기
 ```bash
-printf "6\n12 + 5\n100 - 37\n10 * 7\n100 / 4\nq\n0\n" | ./kvm-vmm --paging os-1k/kernel.bin
+make run-1k-os-calc
 ```
 
 **설명**:
@@ -266,10 +243,7 @@ printf "6\n12 + 5\n100 - 37\n10 * 7\n100 / 4\nq\n0\n" | ./kvm-vmm --paging os-1k
 ```
 === Simple Calculator ===
 Enter expression (e.g., "10 + 5") or 'q' to quit:
-$ 12 + 5 = 17
-$ 100 - 37 = 63
-$ 10 * 7 = 70
-$ 100 / 4 = 25
+$ 123 + 456 = 579
 $ Exiting calculator...
 ```
 
@@ -277,7 +251,7 @@ $ Exiting calculator...
 
 #### 3-7. Factorial (0! ~ 12!)
 ```bash
-printf "7\n0\n" | ./kvm-vmm --paging os-1k/kernel.bin
+make run-1k-os-factorial
 ```
 
 **설명**:
@@ -308,7 +282,7 @@ Note: 13! and above overflow 32-bit integers
 
 #### 3-8. GCD (최대공약수)
 ```bash
-printf "8\n0\n" | ./kvm-vmm --paging os-1k/kernel.bin
+make run-1k-os-gcd
 ```
 
 **설명**:
@@ -329,7 +303,7 @@ GCD(17, 19) = 1 (coprime)
 
 #### 3-9. About 1K OS
 ```bash
-printf "9\n0\n" | ./kvm-vmm --paging os-1k/kernel.bin
+make run-1k-os-about
 ```
 
 **예상 결과**:
@@ -357,13 +331,13 @@ Thank you for using 1K OS!
 ### 1. 출력 정리
 디버그 메시지가 너무 많으면:
 ```bash
-./kvm-vmm guest/counter.bin 2>&1 | grep -v "IO\|EXIT\|HC"
+make run-counter 2>&1 | grep -v "IO\|EXIT\|HC"
 ```
 
 ### 2. 타임아웃 설정
 무한 대기 방지:
 ```bash
-timeout 5s ./kvm-vmm --paging os-1k/kernel.bin < input.txt
+timeout 5s make run-1k-os-multiplication
 ```
 
 ### 3. 깔끔한 화면
@@ -382,6 +356,7 @@ clear
 두 개의 완전히 독립적인 프로그램이 동시에 실행됩니다.
 
 [명령어 입력]
+make run-multi2
 
 보시다시피 두 프로그램의 출력이 섞여 나오는데,
 이것은 진짜 병렬 실행이 일어나고 있다는 증거입니다.
@@ -403,6 +378,7 @@ IOPL=3을 설정해서 user space에서 I/O 명령어를
 실행할 수 있게 했습니다.
 
 [명령어 입력]
+make run-1k-os-echo
 
 이제 입력이 정상적으로 에코되는 것을 볼 수 있습니다."
 ```
@@ -425,14 +401,13 @@ sudo usermod -aG kvm $USER
 
 ### 문제: 게스트가 실행 안 됨
 ```bash
-# 재빌드
-make clean
-make
+# 전체 재빌드 및 실행
+make clean all run-hello
 ```
 
 ### 문제: 1K OS 입력 안 받음
-- 파일 리다이렉션 사용: `< input.txt`
-- 충분한 타임아웃 설정: `timeout 10s`
+- `make run-1k-os-shell` 을 사용하여 대화형으로 입력하거나, `printf` 파이프라인을 사용하세요.
+- 충분한 타임아웃 설정: `timeout 10s make run-1k-os-multiplication`
 
 ---
 
@@ -452,10 +427,7 @@ make
 
 시연 전 확인:
 - [ ] 디렉토리 위치 확인 (`kvm-vmm-x86`)
-- [ ] 빌드 완료 확인 (`./kvm-vmm` 파일 존재)
-- [ ] 게스트 바이너리 존재 확인 (`ls guest/*.bin`)
-- [ ] 1K OS 빌드 확인 (`os-1k/kernel.bin` 존재)
-- [ ] 입력 파일 준비 (`/tmp/demo_input.txt`)
+- [ ] 빌드 완료 확인 (`make all` 실행)
 - [ ] 터미널 폰트 크기 확대 (가독성)
 - [ ] 화면 녹화/캡처 준비 (선택)
 
