--- a/docs/프로젝트_분석.md
+++ b/docs/프로젝트_분석.md
@@ -22,62 +22,39 @@
 *   QEMU/KVM
 *   Rust (Rust 기반 구성 요소의 경우)
 
-**빌드 명령어:**
+**빌드 및 실행 명령어:**
 
-*   **VMM 빌드 (C 버전):**
+*   **C 기반 VMM 및 게스트 (권장):**
+    `kvm-vmm-x86/` 디렉토리에서 `make` 명령어를 사용하여 모든 구성요소를 빌드하고 실행할 수 있습니다.
     ```bash
     cd kvm-vmm-x86
-    make vmm
-    ```
-
-*   **리얼 모드 게스트 빌드:**
-    ```bash
-    cd kvm-vmm-x86/guest
-    ./build.sh
-    ```
-
-*   **1K OS 빌드 (보호 모드 게스트):**
-    ```bash
-    cd kvm-vmm-x86/os-1k
-    make
+    # 모든 컴포넌트 빌드
+    make all
+    # 실행 예제: hello 게스트 실행
+    make run-hello
+    # 실행 예제: 1K OS 셸 실행
+    make run-1k-os-shell
+    # 사용 가능한 모든 make 명령어 확인
+    make help
     ```
 
 *   **Rust 기반 하이퍼바이저 빌드:**
     ```bash
-    cd hypervisor
+    cd experimental/hypervisor
     cargo build
     ```
 
 *   **HLeOs 빌드:**
     ```bash
-    cd HLeOs/HLeOs
+    cd experimental/HLeOs/HLeOs
     make
-    ```
-
-**VMM 실행:**
-
-C 기반 VMM은 게스트 바이너리를 인수로 사용하여 명령줄에서 실행됩니다.
-
-*   **리얼 모드 게스트 실행:**
-    ```bash
-    ./kvm-vmm-x86/kvm-vmm ./kvm-vmm-x86/guest/hello.bin
-    ```
-
-*   **여러 vCPU에서 여러 리얼 모드 게스트 실행:**
-    ```bash
-    ./kvm-vmm-x86/kvm-vmm ./kvm-vmm-x86/guest/multiplication.bin ./kvm-vmm-x86/guest/counter.bin
-    ```
-
-*   **1K OS 실행 (보호 모드):**
-    ```bash
-    printf "1\n0\n" | ./kvm-vmm-x86/kvm-vmm --paging ./kvm-vmm-x86/os-1k/kernel.bin
     ```
 
 ### 개발 규칙
 
 *   **코드 스타일:** C 코드는 4칸 들여쓰기를 사용하는 K&R 스타일을 따릅니다. 함수 이름은 `snake_case`를 사용하고 매크로는 `UPPER_CASE`를 사용합니다. 어셈블리 코드는 Intel 구문을 사용하고 소문자 니모닉을 사용합니다.
 *   **주석:** 주석은 코드가 '무엇'을 하는지보다 '왜' 그렇게 하는지를 설명하는 데 사용됩니다.
-*   **테스트:** 이 프로젝트에는 `make` 대상(예: `make test`, `make test-hello`)을 통해 실행할 수 있는 여러 테스트 케이스가 포함되어 있습니다.
+*   **테스트:** 이 프로젝트는 `kvm-vmm-x86/` 디렉토리에서 `make` 명령어를 통해 실행할 수 있는 여러 테스트 케이스를 포함하고 있습니다 (예: `make run-hello`, `make run-multi2`, `make run-1k-os-multiplication`).
 
 ### 주요 파일
 
