docs: Update 데모가이드 with new color scheme and execution methods
- Change vCPU 0 color from red to cyan in all examples
- Update execution commands from 'make run-*' to './kvm-vmm'
- Add Real Mode hang fix to problem solving section
- Improve presentation script with unbuffered output explanation
- Update recent improvements section with color change rationale

--- a/docs/데모가이드.md
+++ b/docs/데모가이드.md
@@ -46,87 +46,107 @@ ls -lh kvm-vmm guest/*.bin os-1k/*.bin
 
 ## 시연 시나리오
 
-모든 시연은 `kvm-vmm-x86` 디렉토리에서 `make run-<타겟>` 형식으로 실행합니다.
+모든 시연은 `./kvm-vmm <게스트바이너리>` 형식으로 직접 실행합니다.
 
 ### 시연 1: 기본 리얼 모드 게스트
 
 #### 1-1. Minimal Guest (가장 단순한 1바이트 게스트)
 ```bash
-make run-minimal
+./kvm-vmm guest/minimal.bin
 ```
 **설명**: 단 1바이트(HLT 명령어)로 구성된 가장 단순한 게스트. VMM이 정상 동작하는지 확인.
 
-**예상 결과**: 즉시 "Guest halted" 메시지와 함께 종료
+**예상 결과**: 
+```
+[minimal] Thread started
+[minimal] Guest halted after 1 exits
+[minimal] Thread exiting (total exits: 1)
+
+=== All vCPUs completed ===
+```
+즉시 종료 (인터럽트 없이 깔끔하게!)
 
 ---
 
 #### 1-2. Hello Guest (문자열 출력)
 ```bash
-make run-hello
+./kvm-vmm guest/hello.bin
 ```
-**설명**: "Hello, KVM!" 메시지를 UART 포트(0x3f8)로 출력하는 게스트.
+**설명**: "Hello, KVM!" 메시지를 하이퍼콜로 출력하는 게스트.
 
 **예상 결과**: 
 ```
+[hello] Thread started
 Hello, KVM!
+[hello] Guest halted after 13 exits
+[hello] Thread exiting (total exits: 13)
+
+=== All vCPUs completed ===
 ```
-출력 후 종료
 
 ---
 
 #### 1-3. Counter Guest (숫자 출력)
 ```bash
-make run-counter
+./kvm-vmm guest/counter.bin
 ```
 **설명**: 0부터 9까지 순차적으로 출력하는 게스트.
 
 **예상 결과**: 
 ```
-0123456789
+[counter] Thread started
+0123456789[counter] Guest halted after 11 exits
+[counter] Thread exiting (total exits: 11)
+
+=== All vCPUs completed ===
 ```
-출력 후 종료
 
 ---
 
-### 시연 2: 다중 vCPU (핵심 기능!)
+### 시연 2: 다중 vCPU (핵심 기능!) 🌟
 
 #### 2개 게스트 동시 실행
 ```bash
-make run-multi2
+./kvm-vmm guest/multiplication.bin guest/counter.bin
 ```
 
 **설명**:
-- **vCPU 0**: Multiplication guest가 " x = " 출력 (hypercall 사용)
-- **vCPU 1**: Counter guest가 "0123456789" 출력 (UART 사용)
-- **핵심**: 두 출력이 인터리브되어 나타남 → 진짜 병렬 실행!
+- **vCPU 0** (청록 🩵): Multiplication guest가 구구단 출력 (hypercall 사용)
+- **vCPU 1** (초록 🟢): Counter guest가 "0123456789" 출력
+- **핵심**: 두 출력이 **색상으로 구분**되며 인터리브됨 → 진짜 병렬 실행!
 
-**예상 결과** (개선된 버전 - 출력 버퍼링):
+**예상 결과** (터미널에서 색상으로 구분):
 ```
-0123456789
-[vCPU 0:multiplication] 2x1=2 2x2=4 2x3=6 ... 9x9=81
+0[청록]2[초록]1[청록]x[초록]2[청록]1[초록]3...
 ```
-(각 vCPU의 출력이 줄 단위로 그룹화되어 매우 깔끔함)
+출력이 문자 단위로 섞이며, 각 vCPU의 출력이 서로 다른 색으로 표시됨
 
 **강조 포인트**:
 - 각 vCPU가 독립적인 256KB 메모리 공간 사용
 - vCPU 0: GPA 0x00000, vCPU 1: GPA 0x40000
 - Real Mode에서 CS 레지스터로 주소 지정 (CS×16 + IP)
-- 출력 버퍼링으로 다중 vCPU 출력을 라인 단위로 그룹화 (개선사항)
+- **색상 코딩**: 청록/초록/노랑/파랑으로 vCPU 구분 (빨강은 오류로 오인될 수 있어 제외)
+- **즉각 출력**: 버퍼링 없이 character-by-character 출력으로 병렬성 극대화
 
 ---
 
 #### 4개 게스트 동시 실행 (최대 확장성)
 ```bash
-make run-multi4
+./kvm-vmm guest/counter.bin guest/hello.bin guest/multiplication.bin guest/minimal.bin
 ```
 
 **설명**: 4개 vCPU가 각각 다른 프로그램을 동시에 실행
-- vCPU 0: Counter (0-9)
-- vCPU 1: Hello
-- vCPU 2: Multiplication
-- vCPU 3: Minimal (즉시 종료)
+- vCPU 0 (🩵 청록): Counter (0-9)
+- vCPU 1 (🟢 초록): Hello
+- vCPU 2 (🟡 노랑): Multiplication
+- vCPU 3 (🔵 파랑): Minimal (즉시 종료)
 
-**예상 결과**: 4개 프로그램의 출력이 모두 섞여서 나옴
+**예상 결과**: 
+```
+0[노랑]2[초록]H[청록]1[노랑]x[초록]e[청록]2...
+[파랑][vCPU 3:minimal] Guest halted after 1 exits
+```
+4가지 색상으로 구분된 출력이 실시간으로 섞임!
 
 ---
 
@@ -134,13 +154,13 @@ make run-multi4
 
 #### 3-1. 구구단 출력
 ```bash
-make run-1k-os-multiplication
+printf '1\n0\n' | ./kvm-vmm --paging os-1k/kernel.bin
 ```
 
 **설명**: 
-- Protected Mode + 페이징 활성화
-- 4MB 메모리, GDT/IDT 설정
-- 타이머 & 키보드 인터럽트 처리
+- Protected Mode + 페이징 활성화 (`--paging` 플래그)
+- 4MB 메모리, GDT/IDT 설정, PSE (4MB 페이지) 사용
+- 타이머 & 키보드 인터럽트 처리 (IRQCHIP 활성화)
 - User space 프로그램 실행 (9개 프로그램!)
 
 **예상 결과**:
@@ -151,23 +171,26 @@ make run-1k-os-multiplication
   3. Echo (interactive)
   4. Fibonacci Sequence
   5. Prime Numbers (up to 100)
-  6. Calculator (+, -, *, /)
+  6. Calculator
   7. Factorial (0! ~ 12!)
-  8. GCD (Euclidean Algorithm)
+  8. GCD (Greatest Common Divisor)
   9. About 1K OS
   0. Exit
 
-Select: 1
+Select: 
 
 === Multiplication Table ===
-2*1=2 2*2=4 2*3=6 ... 9*9=81
+2*1=2 2*2=4 2*3=6 2*4=8 2*5=10 2*6=12 2*7=14 2*8=16 2*9=18 
+3*1=3 3*2=6 3*3=9 3*4=12 3*5=15 ... 9*9=81 
+
+(메뉴로 돌아간 후 0 입력으로 종료)
 ```
 
 ---
 
 #### 3-2. 카운터
 ```bash
-make run-1k-os-counter
+printf '2\n0\n' | ./kvm-vmm --paging os-1k/kernel.bin
 ```
 
 **예상 결과**:
@@ -178,22 +201,24 @@ make run-1k-os-counter
 
 ---
 
-#### 3-3. 대화형 에코
+#### 3-3. 대화형 에코 (대화형 테스트 권장)
 ```bash
-make run-1k-os-echo
+./kvm-vmm --paging os-1k/kernel.bin
+# 메뉴에서 3 선택 → 메시지 입력 → "quit" 입력 → 0으로 종료
 ```
 
 **설명**: 
-- User space에서 OUT+IN hypercall로 키보드 입력 받기
-- IOPL=3 설정으로 user space I/O 허용
+- User space에서 하이퍼콜로 키보드 입력 받기
+- 인터럽트 기반 stdin 모니터링
 
 **예상 결과**:
 ```
-=== Echo Program (type 'quit' to exit) ===
-$ Hello 1K OS
-Echo: Hello 1K OS
-$ This is amazing!
-Echo: This is amazing!
+Select: 3
+
+=== Echo Program ===
+Type messages (type 'quit' to exit)
+$ Hello
+Echo: Hello
 $ quit
 Exiting echo program
 ```
@@ -202,56 +227,63 @@ Exiting echo program
 
 #### 3-4. Fibonacci 수열
 ```bash
-make run-1k-os-fibonacci
+printf '4\n0\n' | ./kvm-vmm --paging os-1k/kernel.bin
 ```
 
 **예상 결과**:
 ```
-=== Fibonacci Sequence ===
-Calculating Fibonacci numbers up to 89:
-0 1 1 2 3 5 8 13 21 34 55 89
+=== Fibonacci Sequence (first 15 numbers) ===
+F(0) = 0
+F(1) = 1
+F(2) = 1
+F(3) = 2
+F(4) = 3
+F(5) = 5
+F(6) = 8
+F(7) = 13
+F(8) = 21
+F(9) = 34
+F(10) = 55
+F(11) = 89
+F(12) = 144
+F(13) = 233
+F(14) = 377
 ```
 
 ---
 
 #### 3-5. 소수 찾기
 ```bash
-make run-1k-os-primes
+printf '5\n0\n' | ./kvm-vmm --paging os-1k/kernel.bin
 ```
 
 **예상 결과**:
 ```
 === Prime Numbers up to 100 ===
-2 3 5 7 11 13 17 19 23 29
-31 37 41 43 47 53 59 61 67 71
-73 79 83 89 97
+2 3 5 7 11 13 17 19 23 29 
+31 37 41 43 47 53 59 61 67 71 
+73 79 83 89 97 
 Total: 25 primes
 ```
 
 ---
 
-#### 3-6. 계산기
+#### 3-6. 계산기 (입력 파싱 이슈 있음)
 ```bash
-make run-1k-os-calc
+printf '6\n42 + 58\nq\n0\n' | ./kvm-vmm --paging os-1k/kernel.bin
 ```
 
 **설명**:
 - 기본 사칙연산 (+, -, *, /)
-- 대화형 입력으로 여러 계산 가능
+- 공백으로 구분된 형식: "숫자 연산자 숫자"
 
-**예상 결과**:
-```
-=== Simple Calculator ===
-Enter expression (e.g., "10 + 5") or 'q' to quit:
-$ 123 + 456 = 579
-$ Exiting calculator...
-```
+**알려진 이슈**: 입력 파싱에 버그가 있어 제대로 동작하지 않을 수 있음 (1K OS 코드 문제)
 
 ---
 
 #### 3-7. Factorial (0! ~ 12!)
 ```bash
-make run-1k-os-factorial
+printf '7\n0\n' | ./kvm-vmm --paging os-1k/kernel.bin
 ```
 
 **설명**:
@@ -261,6 +293,8 @@ make run-1k-os-factorial
 **예상 결과**:
 ```
 === Factorial Calculator ===
+Calculating factorials for n = 0 to 12
+
 0! = 1
 1! = 1
 2! = 2
@@ -275,35 +309,37 @@ make run-1k-os-factorial
 11! = 39916800
 12! = 479001600
 
-Note: 13! and above overflow 32-bit integers
+Note: 13! = 6227020800 (overflow on 32-bit)
 ```
 
 ---
 
 #### 3-8. GCD (최대공약수)
 ```bash
-make run-1k-os-gcd
+printf '8\n0\n' | ./kvm-vmm --paging os-1k/kernel.bin
 ```
 
 **설명**:
 - 유클리드 호제법 (Euclidean Algorithm) 시연
-- 5가지 예제 쌍 계산
+- 여러 예제 쌍 계산
 
 **예상 결과**:
 ```
-=== GCD Calculator (Euclidean Algorithm) ===
+=== GCD (Greatest Common Divisor) ===
+Examples of Euclidean algorithm:
+
 GCD(48, 18) = 6
-GCD(100, 35) = 5
-GCD(81, 27) = 27
+GCD(100, 75) = 25
 GCD(123, 456) = 3
-GCD(17, 19) = 1 (coprime)
+GCD(17, 19) = 1
+GCD(1071, 462) = 21
 ```
 
 ---
 
 #### 3-9. About 1K OS
 ```bash
-make run-1k-os-about
+printf '9\n0\n' | ./kvm-vmm --paging os-1k/kernel.bin
 ```
 
 **예상 결과**:
@@ -319,31 +355,34 @@ Features:
 
 Mini-KVM VMM Project
 Educational hypervisor using KVM API
-
-Exiting shell...
-Thank you for using 1K OS!
 ```
 
 ---
 
 ## 시연 팁
 
-### 1. 출력 정리
-디버그 메시지가 너무 많으면:
+### 1. Verbose 모드 (디버깅용)
+VM exit, I/O, 하이퍼콜 상세 로그 출력:
 ```bash
-make run-counter 2>&1 | grep -v "IO\|EXIT\|HC"
+./kvm-vmm --verbose guest/hello.bin
 ```
 
 ### 2. 타임아웃 설정
 무한 대기 방지:
 ```bash
-timeout 5s make run-1k-os-multiplication
+timeout 5s ./kvm-vmm --paging os-1k/kernel.bin
 ```
 
 ### 3. 깔끔한 화면
 시연 전에:
 ```bash
 clear
+```
+
+### 4. 색상 출력 확인
+다중 vCPU 실행 시 터미널이 색상을 지원하는지 확인:
+```bash
+echo $TERM  # xterm-256color 등이 나와야 함
 ```
 
 ---
@@ -356,19 +395,22 @@ clear
 두 개의 완전히 독립적인 프로그램이 동시에 실행됩니다.
 
 [명령어 입력]
-make run-multi2
+./kvm-vmm guest/multiplication.bin guest/counter.bin
 
-보시다시피 두 프로그램의 출력이 섞여 나오는데,
+보시다시피 두 프로그램의 출력이 색상으로 구분되어 섞여 나오는데,
 이것은 진짜 병렬 실행이 일어나고 있다는 증거입니다.
 
 각 vCPU는 256KB의 독립적인 메모리 공간을 가지고 있으며,
-Real Mode의 세그먼트 주소 지정 방식을 사용합니다."
+Real Mode의 세그먼트 주소 지정 방식을 사용합니다.
+
+출력이 문자 단위로 실시간 섞이는 것을 보실 수 있는데,
+이는 버퍼링을 제거해서 병렬성을 극대화한 결과입니다."
 ```
 
 ### 시연 3-3 (에코) 시연 시
 ```
 "이 에코 프로그램은 특별한 의미가 있습니다.
-오늘 발견하고 수정한 버그의 결과물이기 때문입니다.
+개발 과정에서 발견하고 수정한 버그의 결과물이기 때문입니다.
 
 문제는 user space의 getchar 함수가 OUT 명령어만 사용해서
 입력을 전혀 받지 못했던 것이었습니다.
@@ -378,7 +420,8 @@ IOPL=3을 설정해서 user space에서 I/O 명령어를
 실행할 수 있게 했습니다.
 
 [명령어 입력]
-make run-1k-os-echo
+./kvm-vmm --paging os-1k/kernel.bin
+(메뉴에서 3 입력)
 
 이제 입력이 정상적으로 에코되는 것을 볼 수 있습니다."
 ```
@@ -401,13 +444,21 @@ sudo usermod -aG kvm $USER
 
 ### 문제: 게스트가 실행 안 됨
 ```bash
-# 전체 재빌드 및 실행
-make clean all run-hello
+# 전체 재빌드
+make clean all
+
+# 실행
+./kvm-vmm guest/hello.bin
 ```
 
 ### 문제: 1K OS 입력 안 받음
-- `make run-1k-os-shell` 을 사용하여 대화형으로 입력하거나, `printf` 파이프라인을 사용하세요.
-- 충분한 타임아웃 설정: `timeout 10s make run-1k-os-multiplication`
+- 대화형 입력이 필요한 경우: `./kvm-vmm --paging os-1k/kernel.bin`
+- 자동화된 입력: `printf '1\n0\n' | ./kvm-vmm --paging os-1k/kernel.bin`
+- 충분한 타임아웃 설정: `timeout 10s ./kvm-vmm --paging os-1k/kernel.bin`
+
+### 문제: Real Mode 게스트가 멈춤
+- **해결됨!** 이전에는 IRQCHIP 때문에 멈췄지만, 현재는 Real Mode에서 IRQCHIP을 생성하지 않아 즉시 종료됨
+- Protected Mode에서만 `--paging` 플래그로 IRQCHIP 활성화
 
 ---
 
@@ -435,19 +486,34 @@ make clean all run-hello
 
 ## 최근 개선사항 (2025-11-23)
 
-### 1. 출력 버퍼링 개선
-- **문제**: 다중 vCPU 실행 시 출력이 문자 단위로 섞여 읽기 어려움
-- **해결**: 각 vCPU마다 512바이트 출력 버퍼 추가
-- **효과**: 한 줄 단위로 출력이 그룹화되어 훨씬 읽기 편함
+### 1. VMM Hang 문제 완전 해결 ✅
+- **문제**: Real Mode 게스트가 실행 후 종료되지 않고 무한정 대기
+- **원인**: 불필요한 IRQCHIP과 timer 인터럽트가 HLT를 방해
+- **해결**: 
+  - Protected Mode에서만 IRQCHIP 생성 (`init_kvm(bool need_irqchip)`)
+  - Timer/stdin 스레드도 Protected Mode에서만 시작
+- **효과**: 모든 Real Mode 프로그램 즉시 실행/종료 (< 100ms)
 
-### 2. 성능 개선
-- **Exit 한계값**: 10,000 → 100,000 (10배 증가)
-- **타이머 주기**: 10ms → 100ms (10배 감소)
-- **효과**: 1K OS 대화형 사용 시간 8초 → 약 100초 이상 가능
+### 2. 색상 출력 개선 🎨
+- **개선 전**: 모든 출력에 색상 적용 (단일 vCPU에서도 불필요)
+- **개선 후**:
+  - **단일 vCPU**: 깔끔한 `[guest_name]` 프리픽스, 색상 없음
+  - **다중 vCPU**: 청록/초록/노랑/파랑으로 각 vCPU 구분
+  - **색상 변경**: vCPU 0을 빨강에서 청록으로 변경 (오류 메시지로 오인 방지)
+- **효과**: 가독성 향상, 병렬 실행 시각화, 직관적 색상 구분
 
-### 3. 게스트 프로그램 수정 (이전 작업)
-- `hello.S`: UART I/O → Hypercall 방식으로 변경
-- `multiplication.S`: 미정의 하이퍼콜 제거, 제대로 된 구구단 출력으로 수정
+### 3. 즉각 출력 (Unbuffered Output)
+- **변경**: 출력 버퍼링 제거 → character-by-character 즉시 출력
+- **효과**: 다중 vCPU 병렬 실행 효과가 더 명확히 보임
+
+### 4. Verbose 모드 추가
+- `--verbose` 플래그: VM exit, I/O, 하이퍼콜 상세 로그
+- 일반 사용자는 깨끗한 출력, 개발자는 상세 디버깅 가능
+
+### 5. 실행 방식 개선
+- **이전**: `make run-<target>` (간접 실행)
+- **현재**: `./kvm-vmm <guest.bin>` (직접 실행)
+- **효과**: 더 직관적이고 유연한 사용법
 
 ---
 
