refactor: Remove all emojis from markdown files
- Remove emojis from docs/데모가이드.md (color indicators, feature highlights)
- Remove checkmark emojis from research/week11/README.md
- Improves professional appearance and text-only compatibility
- Total 14 emoji occurrences removed from 2 files

--- a/docs/데모가이드.md
+++ b/docs/데모가이드.md
@@ -103,7 +103,7 @@ Hello, KVM!
 
 ---
 
-### 시연 2: 다중 vCPU (핵심 기능!) 🌟
+### 시연 2: 다중 vCPU (핵심 기능!)
 
 #### 2개 게스트 동시 실행
 ```bash
@@ -111,8 +111,8 @@ Hello, KVM!
 ```
 
 **설명**:
-- **vCPU 0** (청록 🩵): Multiplication guest가 구구단 출력 (hypercall 사용)
-- **vCPU 1** (초록 🟢): Counter guest가 "0123456789" 출력
+- **vCPU 0** (청록): Multiplication guest가 구구단 출력 (hypercall 사용)
+- **vCPU 1** (초록): Counter guest가 "0123456789" 출력
 - **핵심**: 두 출력이 **색상으로 구분**되며 인터리브됨 → 진짜 병렬 실행!
 
 **예상 결과** (터미널에서 색상으로 구분):
@@ -136,10 +136,10 @@ Hello, KVM!
 ```
 
 **설명**: 4개 vCPU가 각각 다른 프로그램을 동시에 실행
-- vCPU 0 (🩵 청록): Counter (0-9)
-- vCPU 1 (🟢 초록): Hello
-- vCPU 2 (🟡 노랑): Multiplication
-- vCPU 3 (🔵 파랑): Minimal (즉시 종료)
+- vCPU 0 (청록): Counter (0-9)
+- vCPU 1 (초록): Hello
+- vCPU 2 (노랑): Multiplication
+- vCPU 3 (파랑): Minimal (즉시 종료)
 
 **예상 결과**: 
 ```
@@ -486,7 +486,7 @@ make clean all
 
 ## 최근 개선사항 (2025-11-23)
 
-### 1. VMM Hang 문제 완전 해결 ✅
+### 1. VMM Hang 문제 완전 해결
 - **문제**: Real Mode 게스트가 실행 후 종료되지 않고 무한정 대기
 - **원인**: 불필요한 IRQCHIP과 timer 인터럽트가 HLT를 방해
 - **해결**: 
@@ -494,7 +494,7 @@ make clean all
   - Timer/stdin 스레드도 Protected Mode에서만 시작
 - **효과**: 모든 Real Mode 프로그램 즉시 실행/종료 (< 100ms)
 
-### 2. 색상 출력 개선 🎨
+### 2. 색상 출력 개선
 - **개선 전**: 모든 출력에 색상 적용 (단일 vCPU에서도 불필요)
 - **개선 후**:
   - **단일 vCPU**: 깔끔한 `[guest_name]` 프리픽스, 색상 없음
