feat: Improve multi-vCPU demo with Magenta color palette and balanced guest programs
- Change vCPU 0 color from Cyan (36m) to Magenta (35m) for better visual distinction
- Create multiplication_short.S guest program (2x table only) for balanced demo output
- Update build.sh to include multiplication_short compilation
- Update screenshot guide with 4-vCPU recommended command and new color scheme
- Magenta + Green + Yellow + Blue color palette provides clear visual separation

The new 4-vCPU demo command:
  ./kvm-vmm guest/counter.bin guest/multiplication_short.bin guest/hello.bin guest/hctest.bin

Results in visually balanced colored output showing true multi-vCPU parallelism for poster presentation.

--- a/softcon/스크린샷_가이드.md
+++ b/softcon/스크린샷_가이드.md
@@ -6,23 +6,24 @@
 
 **목적**: 4개 vCPU가 동시에 실행되는 것을 색상으로 보여주는 가장 인상적인 데모
 
-**명령어** (3 vCPU - 권장):
+**명령어** (4 vCPU - 권장):
 ```bash
 cd /home/seolcu/문서/코드/mini-kvm/kvm-vmm-x86
-./kvm-vmm guest/counter.bin guest/multiplication.bin guest/hctest.bin
+./kvm-vmm guest/counter.bin guest/multiplication_short.bin guest/hello.bin guest/hctest.bin
 ```
 
 출력:
-- **Cyan (vCPU 0)**: 0-9 카운터
-- **Green (vCPU 1)**: 구구단 (2x1=2 ~ 9x9=81)
-- **Yellow (vCPU 2)**: "Hello!"
+- **Magenta (vCPU 0)**: 0-9 카운터
+- **Green (vCPU 1)**: 2x 곱셈표 (2x1=2 ~ 2x9=18)
+- **Yellow (vCPU 2)**: "Hello, KVM!"
+- **Blue (vCPU 3)**: "Hello!"
 
 **촬영 팁**:
 - 터미널 크기를 적절히 조정 (너무 작거나 크지 않게)
 - 글꼴 크기를 14-16pt로 설정 (가독성 확보)
 - 검은 배경 + 컬러 출력이 잘 보이도록
 - 4개 vCPU의 출력이 섞여 나오는 것이 명확히 보여야 함
-- 스크린샷 후 색상이 잘 나왔는지 확인 (Cyan, Green, Yellow, Blue)
+- 스크린샷 후 색상이 잘 나왔는지 확인 (Magenta, Green, Yellow, Blue)
 
 **파일명**: `screenshot_multi_vcpu.png`
 
