--- a/softcon/포스터_내용.md
+++ b/softcon/포스터_내용.md
@@ -13,20 +13,20 @@
 
 ### 내용
 
-**문제 인식**
-- 기존 하이퍼바이저(QEMU)는 100만 줄 이상의 복잡한 코드
-- 가상화 기술을 배우려는 학생들의 진입 장벽이 매우 높음
-- 교육용 VMM은 기능이 제한적이거나 문서화 부족
+**기술적 도전**
+- 기존 하이퍼바이저(QEMU)는 100만 줄 이상의 방대한 코드
+- 하이퍼바이저의 본질적인 기능을 최소한의 코드로 구현 가능한가?
+- Linux KVM API와 x86 가상화를 완전히 이해하고 제어할 수 있는가?
 
-**해결 방안**
-- **1,500줄**의 간결한 C 코드로 완전한 기능의 하이퍼바이저 구현
-- Linux KVM API 활용으로 **네이티브에 가까운 성능** 달성
-- Real Mode + Protected Mode 지원으로 **다양한 학습 시나리오** 제공
+**핵심 성과**
+- **1,500줄**의 C 코드로 완전한 기능의 x86 하이퍼바이저 구현
+- QEMU 대비 **1/300 코드 크기**로 동등한 기능성 달성
+- Real Mode + Protected Mode 동시 지원하는 듀얼 모드 아키텍처 설계
 
-**핵심 목표**
-- 가상화 기술의 핵심 개념을 실제로 구현하며 학습
-- 작지만 완전한 시스템으로 교육적 가치 극대화
-- 오픈소스 기여를 통한 지식 공유
+**기술적 목표**
+- x86 가상화의 핵심을 처음부터 끝까지 구현
+- 네이티브급 성능을 유지하면서 극한의 경량화 달성
+- 멀티 vCPU 병렬 실행의 기술적 복잡성을 우아하게 해결
 
 ---
 
@@ -91,20 +91,13 @@
 
 **Multi-vCPU 병렬 실행**
 - 4개 게스트를 동시에 실행하는 실시간 시연
-- 각 vCPU별 색상 구분 (Cyan/Green/Yellow/Blue)
+- 각 vCPU별 색상 구분 (Magenta/Green/Yellow/Blue)
 - 실제 병렬성을 눈으로 확인 가능
 
 **1K OS - 완전한 운영체제**
-- 12KB 바이너리에 9개 대화형 프로그램 포함
-  1. 구구단 (2-9단)
-  2. 카운터 (0-9)
-  3. Echo (대화형 I/O)
-  4. Fibonacci 수열
-  5. 소수 계산 (100까지)
-  6. 계산기 (+, -, *, /)
-  7. Factorial (0!-12!)
-  8. 최대공약수 (GCD)
-  9. About 1K OS
+- 12KB 바이너리에 9개 대화형 프로그램 포함 (구구단, 계산기, 소수 계산 등)
+- 사용자 입출력 처리, 메모리 관리, 스택 기반 연산 시스템
+- Protected Mode 페이징 지원으로 32-bit 주소공간 활용
 
 **개발 과정 (12주)**
 - Week 1-3: Real Mode VMM 기본 구현
