docs: Flip system architecture diagram order (Guest VMs → Kernel → Host)
- Reorder 3-layer architecture to match natural system hierarchy
- Guest VMs now at top (what users see)
- Kernel Space in middle (hardware abstraction)
- User Space (Mini-KVM VMM) at bottom (foundation)
- Update arrows direction to reflect information flow (upward)
- More intuitive visualization for conference presentation

--- a/softcon/아키텍처_다이어그램_가이드.md
+++ b/softcon/아키텍처_다이어그램_가이드.md
@@ -10,17 +10,14 @@ PowerPoint에서 직접 그릴 수 있도록 상세한 가이드를 제공합니
 
 ```
 ┌─────────────────────────────────────────┐
-│  User Space (Host) - 연한 파랑색        │
+│  Guest VMs - 연한 핑크색                 │
 │  ┌───────────────────────────────────┐  │
-│  │ Mini-KVM VMM (1,500 LOC)          │  │
-│  │                                   │  │
-│  │ • VM/vCPU 관리                     │  │
-│  │ • I/O 에뮬레이션 (UART, Hypercall) │  │
-│  │ • Interrupt 주입                  │  │
-│  │ • pthread 멀티스레딩               │  │
+│  │ Real Mode (16-bit) 게스트          │  │
+│  │ OR                                │  │
+│  │ Protected Mode (32-bit) + 1K OS   │  │
 │  └───────────────────────────────────┘  │
 │                                         │
-│            ⬇ KVM ioctl()                 │
+│            ⬆ Hardware                   │
 ├─────────────────────────────────────────┤
 │  Kernel Space - 연한 초록색              │
 │  ┌───────────────────────────────────┐  │
@@ -31,13 +28,16 @@ PowerPoint에서 직접 그릴 수 있도록 상세한 가이드를 제공합니
 │  │ • VM Exit 처리                    │  │
 │  └───────────────────────────────────┘  │
 │                                         │
-│            ⬇ Hardware                   │
+│            ⬆ KVM ioctl()                 │
 ├─────────────────────────────────────────┤
-│  Guest VMs - 연한 핑크색                 │
+│  User Space (Host) - 연한 파랑색        │
 │  ┌───────────────────────────────────┐  │
-│  │ Real Mode (16-bit) 게스트          │  │
-│  │ OR                                │  │
-│  │ Protected Mode (32-bit) + 1K OS   │  │
+│  │ Mini-KVM VMM (1,500 LOC)          │  │
+│  │                                   │  │
+│  │ • VM/vCPU 관리                     │  │
+│  │ • I/O 에뮬레이션 (UART, Hypercall) │  │
+│  │ • Interrupt 주입                  │  │
+│  │ • pthread 멀티스레딩               │  │
 │  └───────────────────────────────────┘  │
 └─────────────────────────────────────────┘
 ```
