docs: Drastically trim Section 5 (Usage and Future Plans)
- Remove verbose subsections (System Programming Education, Research Foundation, etc.)
- Remove detailed Expected Effects section
- Consolidate to concise bullet points
- Change title to '향후 전개' (Future Direction)
- Keep only essential content: current contribution + future expansion
- Reduces Section 5 from ~50 lines to ~15 lines
- Better space allocation for poster design

--- a/softcon/포스터_내용.md
+++ b/softcon/포스터_내용.md
@@ -145,52 +145,22 @@
 
 ---
 
-## 섹션 5: 활용방안 및 기대효과
+## 섹션 5: 활용 및 확장
 
 ### 제목
-**교육적 가치 및 향후 계획**
+**향후 전개**
 
-### 활용방안
+### 내용
 
-**시스템 프로그래밍 교육**
-- 하이퍼바이저 동작 원리 학습 자료
-- KVM API 실습 플랫폼
-- OS 개발 입문 환경
-
-**연구 및 개발 기반**
-- 가상화 기술 프로토타이핑
-- 새로운 아키텍처 실험
-- 성능 최적화 연구
-
-**오픈소스 기여**
-- GitHub 공개로 지식 공유
-- 교육 커뮤니티 기여
-- 개선 사항 지속 개발
-
-### 기대효과
-
-**학습 곡선 완화**
-- 1,500줄로 완전한 VMM 이해 가능
-- 단계별 문서화로 점진적 학습 지원
-- 실무 수준 가상화 기술 습득
-
-**실용적 성능**
-- 교육용이지만 프로덕션급 성능
+**현재 기여도**
+- 1,500줄의 완전한 x86 하이퍼바이저 구현
 - 실제 운영체제(1K OS) 실행 가능
-- 네이티브에 가까운 속도로 빠른 반복 개발
+- 오픈소스로 공개 (GitHub)
 
-### 향후 확장 계획
-
-**추가 기능**
+**향후 확장**
 - 64-bit Long Mode 지원
-- Disk I/O 에뮬레이션
-- Network TAP 디바이스
-- Linux 게스트 부팅 지원
-
-**성능 개선**
-- Batch hypercall로 VM exit 감소
-- 메모리 사전 할당 최적화
-- 더 많은 vCPU 지원
+- Linux 게스트 부팅
+- 추가 I/O 에뮬레이션
 
 ---
 
