docs: Reorganize and standardize documentation structure
- Remove duplicate docs/프로젝트_분석.md (identical to README.md)
- Update docs/데모가이드.md: remove obsolete 'make run-*' commands
- Create docs/investigations/ folder for troubleshooting records
  - Merge BUILD_ISSUE and INVESTIGATION_TRIPLE_FAULT into comprehensive guide
  - Move INVESTIGATION_1K_OS_SHUTDOWN.md to investigations/
  - Add investigations/README.md to track issue status
- Add Historical marker to docs/1K_OS_설계.md with notes on differences from current implementation
- Create docs/INDEX.md as navigation guide for all documentation
- Update docs/벤치마크_결과.md with system information (AMD Ryzen 5 9600X, Arch Linux)

All documentation now follows consistent formatting and structure.

--- a/docs/데모가이드.md
+++ b/docs/데모가이드.md
@@ -511,9 +511,8 @@ make clean all
 - 일반 사용자는 깨끗한 출력, 개발자는 상세 디버깅 가능
 
 ### 5. 실행 방식 개선
-- **이전**: `make run-<target>` (간접 실행)
 - **현재**: `./kvm-vmm <guest.bin>` (직접 실행)
-- **효과**: 더 직관적이고 유연한 사용법
+- **효과**: 직관적이고 유연한 사용법으로 다양한 옵션 조합 가능
 
 ---
 
