--- a/docs/벤치마크_결과.md
+++ b/docs/벤치마크_결과.md
@@ -1,9 +1,12 @@
 # Mini-KVM 성능 벤치마크 결과
 
 **측정 날짜**: 2025년 11월 23일  
-**시스템**: Fedora Linux, x86_64  
-**CPU**: (시스템 정보 추가 필요)  
-**측정 도구**: `/usr/bin/time`
+**측정 환경**:
+- **OS**: Arch Linux (커널 6.12.59-1-lts)
+- **CPU**: AMD Ryzen 5 9600X 6-Core Processor (Zen 5 아키텍처)
+- **RAM**: 30GB
+- **아키텍처**: x86_64 (게스트는 32비트)
+- **측정 도구**: `/usr/bin/time`
 
 ---
 
